o Make it compile on Java 1.4.
git-svn-id: https://svn.eu.apache.org/repos/asf/maven/plugins/trunk@677965 13f79535-47bb-0310-9956-ffa450edef68